<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/laguntzaHasiera"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/marginaGoraBehera" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/qrLaguntzaBotoia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_camera"
                    android:onClick="onClickLaguntzaAzpiatala"
                    android:text="@string/qrIrakurlea"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/qrIrakurleaLaguntza"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/ezarpenakLaguntzaBotoia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_preferences"
                    android:onClick="onClickLaguntzaAzpiatala"
                    android:text="@string/action_settings"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/ezarpenakLaguntza"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/historiaLaguntzaBotoia"
                    style="@style/AppBaseTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@android:drawable/ic_menu_recent_history"
                    android:onClick="onClickLaguntzaAzpiatala"
                    android:text="@string/historia"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/historiaLaguntza"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>
        </TableLayout>
        
    </LinearLayout>

</ScrollView>