<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/laguntzaTestua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           style="@style/marginaGoraBeheraEzkerraEskuina"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/qrIrudia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/marginaGoraBehera"
            android:contentDescription="@string/qrIrudiarenAzalpena"
            android:src="@drawable/qr_irudia"
            android:visibility="gone" />

        <TextView
            android:id="@+id/laguntzaTestuaJarraipena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/marginaGoraEzkerraEskuina"
            android:text="@string/qrLaguntzaTestuaJarraipena"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <Button
            android:id="@+id/laguntzaHasieraraItzuliBotoia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:onClick="laguntzaHasieraraItzuli"
            android:text="@string/laguntzaHasieraraItzuli"
            android:textColor="@color/laguntzaraItzuliBotoiKolorea"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
